--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#ff000d</color>
     <color name="colorAccent">#000</color>
     <color name="white">#FFF</color>
+    <color name="high">#de2100</color>
+    <color name="normal">#fdc127</color>
+    <color name="low">#cadc81</color>
 </resources>
