--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="white">#FFF</color>
     <color name="high">#de2100</color>
     <color name="normal">#fdc127</color>
-    <color name="low">#cadc81</color>
+    <color name="low">#85d463</color>
 </resources>
